--- a/brewfile
+++ b/brewfile
@@ -7,16 +7,17 @@ tap "homebrew/cask"
 
 brew "tree"
 brew "mas"
-brew "handbrake"
-# brew "macvim"
-# brew "vim"
-brew "neovim" # always neovim
+brew "handbrake"	# video formatting
+brew "neovim" 		# always neovim, no macvim or regular vim
 brew "ack"
-brew "profanity" # XMPP client
-brew "lf"  # CLI file browser (gokcehan/lf/)
-# brew "mutt" # CLI email cient (muttmua/mutt)
-brew "diskonaut" # CLI disk usage visual treemap
-brew "tmux"  # terminal multiplexer
+# brew "profanity" 	# XMPP client
+brew "lf"  		# CLI file browser (gokcehan/lf/)
+# brew "mutt" 		# CLI email cient (muttmua/mutt)
+brew "diskonaut"	# CLI disk usage visual treemap
+brew "tmux"		# terminal multiplexer
+brew "f3"		# fight flash fraud (USB / SD card checker)
+brew "task"		# for nvim taskwiki
+
 
 # youtube downloader
 #"yt-dlp/taps/yt-dlp"
@@ -24,11 +25,10 @@ brew "tmux"  # terminal multiplexer
 cask "basictex"	# minimal Tex Distribution
 # cask "mactex" # LaTeX Live distribution w GUI
 # cask "tikzit"	# tikz drawing gui
-tap "zegervdv/zathura"
+tap "zegervdv/zathura"	# pdf-viewer
 #cask "zathura"
-cask "pgadmin4" # pgsql database admin tool
-cask "macsvg" 	# svg editor
-cask "firefox"
+cask "pgadmin4" 	# pgsql database admin tool
+cask "macsvg" 		# svg editor
 cask "balenaetcher"	# burn iso to usb
 # cask "karabiner-elements"
 cask "telegram"
@@ -41,7 +41,9 @@ cask "clickup"
 cask "visual-studio-code"
 cask "discord"
 cask "qutebrowser"
+# cask "firefox"
 cask "waterfox"
+cask "inkscape"		# svg / pdf editor
 
 # cask "adium"
 # # adium or pidgin?
@@ -50,5 +52,4 @@ cask "waterfox"
 # cask "fork"
 
 # terminal
-cask "alacritty"
-# cask "iterm2"
+cask "alacritty"	# terminaL
