--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,45 @@
-# remap prefix from ^+A to ^+B
+# colors
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+
+# remap prefix from ^+A to ^+B (for nested tmux sessions)
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
+# enable mouse selection
+# Note: may break OSX copy/paste
+set -g mouse on
+
+# extend history
+set -g history-limit 100000
 
 # set vi keybindings
 setw -g mode-keys vi
+
+# reduce escape time
+set-option -sg escape-time 20
+
+# pane movement shortcuts
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# window selection
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
+# Resize pane shortcuts
+bind -r H resize-pane -L 10
+bind -r J resize-pane -D 10
+bind -r K resize-pane -U 10
+bind -r L resize-pane -R 10
+
+# split with dash and vbar
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+# server-tmux only:
+# fix ssh agent when tmux is detached
+# setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
