--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,3 @@
-# colors
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",*256col*:Tc"
-
 # remap prefix from ^+A to ^+B (for nested tmux sessions)
 unbind C-b
 set -g prefix C-a
@@ -9,7 +5,7 @@ bind C-a send-prefix
 
 # enable mouse selection
 # Note: may break OSX copy/paste
-set -g mouse on
+# set -g mouse on
 
 # extend history
 set -g history-limit 100000
