--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,11 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
+# nvim 'checkhealth' advice
+set-option -g focus-events on
+set-option -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
+
 # enable mouse selection
 # Note: may break OSX copy/paste
 # set -g mouse on
