vimwiki: dth @ dth-MacBookAir

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -154,7 +154,9 @@ schemes:
 # colors: *gruvbox_material_hard_dark
 # colors: *gruvbox_material_medium_dark
 # colors: *gruvbox_material_soft_dark
-
-colors: *gruvbox_material_hard_light
+# colors: *gruvbox_material_hard_light
 # colors: *gruvbox_material_medium_light
 # colors: *gruvbox_material_soft_light
+
+# colors: *gruvbox_material_soft_light
+colors: *gruvbox_material_soft_dark
