:bug: fix codespace testing script

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,4 +8,5 @@ jobs:
     name: install codespaces setup
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - run: ./install.sh
