--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,5 +8,7 @@ jobs:
     name: install codespaces setup
     runs-on: ubuntu-latest
     steps:
+      - name: checkout repo
       - uses: actions/checkout@v1
-      - run: ./install.sh
+      - name: install script
+      - run: ls -la && bash install.sh
