--- a/.github/workflows/test_install_fish.yml
+++ b/.github/workflows/test_install_fish.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   install_fish:
     name: install fish
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v1
       - run: bash install_fish.sh
