--- a/.github/workflows/test_install_fzf.yml
+++ b/.github/workflows/test_install_fzf.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   install_fzf:
     name: install fzf
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v1
       - run: bash install_fzf.sh
