--- a/.github/workflows/test_install_nvim.yml
+++ b/.github/workflows/test_install_nvim.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   install_nvim:
     name: install nvim
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v1
       - run: bash install_nvim.sh
