--- a/.github/workflows/test_install_tmux.yml
+++ b/.github/workflows/test_install_tmux.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   install_tmux:
     name: install tmux
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v1
       - run: bash install_tmux.sh
