--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,9 +8,9 @@ set-option -g focus-events on
 set-option -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 
-# enable mouse selection
-# Note: may break OSX copy/paste
-# set -g mouse on
+# enable mouse support for switching panes/windows
+set -g mouse-utf8 on
+set -g mouse on
 
 # extend history
 set -g history-limit 100000
