:art: copy tmux to xsel (system) clipboard

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,13 +9,14 @@ set-option -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 # enable mouse support for switching panes/windows
-set -g mouse on
+# set -g mouse on
 
 # extend history
 set -g history-limit 100000
 
 # set vi keybindings
 setw -g mode-keys vi
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
 
 # reduce escape time
 set-option -sg escape-time 20
