--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # remap prefix from ^+A to ^+B (for nested tmux sessions)
 unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+set -g prefix M-f
+bind M-f send-prefix
 
 # nvim 'checkhealth' advice
 set-option -g focus-events on
