--- a/assets/windows_terminal/light.settings.json
+++ b/assets/windows_terminal/light.settings.json
@@ -51,7 +51,7 @@
                 "source": "Microsoft.WSL"
             },
             {
-                "colorScheme": "Catppuccin Mocha",
+                "colorScheme": "Catppuccin Latte",
                 "guid": "{6a21a588-bf98-5ca4-a52a-c3ad3f190b1d}",
                 "hidden": false,
                 "name": "NixOS",
