feat: mute windows terminal :sparkles:

--- a/assets/windows_terminal/dark.settings.json
+++ b/assets/windows_terminal/dark.settings.json
@@ -23,7 +23,8 @@
     ],
     "profiles": {
         "defaults": {
-            "colorScheme": "Catppuccin Mocha"
+            "colorScheme": "Catppuccin Mocha",
+            "bellStyle": "none"
         },
         "list": [
             {
