--- a/assets/windows_terminal/light.settings.json
+++ b/assets/windows_terminal/light.settings.json
@@ -23,7 +23,8 @@
     ],
     "profiles": {
         "defaults": {
-            "colorScheme": "Catppuccin Latte"
+            "colorScheme": "Catppuccin Latte",
+            "bellStyle": "none"
         },
         "list": [
             {
